devtools/client/themes/webconsole.css
/* ... */
.
devtools
-
toolbarbutton
[
type
=
menu
]
>
.
toolbarbutton
-
menu
-
dropmarker
.
devtools
-
toolbarbutton
[
type
=
menu
-
button
]
>
.
toolbarbutton
-
menubutton
-
dropmarker
{
-
moz
-
appearance
:
none
!
important
;
list
-
style
-
image
:
url
(
"
chrome
:
/
/
devtools
/
skin
/
images
/
dropmarker
.
svg
"
)
;
-
moz
-
box
-
align
:
center
;
padding
:
0
3px
;
}
media
(
max
-
width
:
500px
)
{
.
message
>
.
timestamp
{
display
:
none
;
}
.
hud
-
console
-
filter
-
toolbar
.
webconsole
-
filter
-
button
.
toolbarbutton
-
text
{
display
:
none
;
}
.
hud
-
console
-
filter
-
toolbar
.
webconsole
-
filter
-
button
{
min
-
width
:
40px
;
}
.
hud
-
console
-
filter
-
toolbar
.
webconsole
-
clear
-
console
-
button
{
min
-
width
:
25px
;
}
.
webconsole
-
filter
-
button
>
.
toolbarbutton
-
menubutton
-
button
:
before
{
width
:
12px
;
height
:
12px
;
margin
-
inline
-
start
:
1px
;
}
.
toolbarbutton
-
menubutton
-
dropmarker
{
margin
:
0px
;
}
}
media
(
max
-
width
:
300px
)
{
.
hud
-
console
-
filter
-
toolbar
{
-
moz
-
box
-
orient
:
vertical
;
}
.
toolbarbutton
-
text
{
display
:
-
moz
-
box
;
}
.
devtools
-
toolbarbutton
{
margin
-
top
:
3px
;
}
.
hud
-
console
-
filter
-
toolbar
.
hud
-
filter
-
box
.
hud
-
console
-
filter
-
toolbar
.
devtools
-
toolbarbutton
{
margin
-
top
:
5px
;
}
}
:
root
[
platform
=
"
win
"
]
.
hud
-
filter
-
box
{
width
:
200px
;
}
.
theme
-
firebug
.
consoletable
.
theme
-
body
{
width
:
100
%
;
border
-
top
:
1px
solid
#
D7D7D7
;
border
-
bottom
:
2px
solid
#
D7D7D7
;
border
-
left
:
1px
solid
#
D7D7D7
;
border
-
right
:
1px
solid
#
D7D7D7
;
}
#
output
-
wrapper
>
div
{
position
:
absolute
;
top
:
0
;
bottom
:
0
;
left
:
0
;
right
:
0
;
}
#
output
-
container
{
height
:
100
%
;
}
.
webconsole
-
output
-
wrapper
{
display
:
flex
;
flex
-
direction
:
column
;
height
:
100
%
;
-
moz
-
user
-
focus
:
normal
;
}
.
webconsole
-
filteringbar
-
wrapper
{
display
:
flex
;
flex
-
wrap
:
wrap
;
}
.
webconsole
-
filterbar
-
primary
{
display
:
flex
;
flex
:
100
0
200px
;
}
.
devtools
-
toolbar
.
webconsole
-
filterbar
-
secondary
{
display
:
flex
;
width
:
100
%
;
align
-
items
:
center
;
-
moz
-
user
-
select
:
none
;
}
.
webconsole
-
filterbar
-
primary
.
devtools
-
plaininput
{
flex
:
1
1
100
%
;
}
.
webconsole
-
filterbar
-
primary
.
filter
-
checkbox
{
flex
-
shrink
:
0
;
margin
:
0
3px
;
display
:
flex
;
align
-
items
:
center
;
-
moz
-
user
-
select
:
none
;
}
.
webconsole
-
filterbar
-
secondary
.
devtools
-
separator
{
margin
:
0
5px
;
}
.
webconsole
-
filterbar
-
filtered
-
messages
{
flex
-
grow
:
1
;
justify
-
content
:
flex
-
end
;
color
:
var
(
-
-
theme
-
comment
)
;
text
-
align
:
end
;
}
.
webconsole
-
filterbar
-
filtered
-
messages
.
filter
-
message
-
text
{
font
-
style
:
italic
;
-
moz
-
user
-
select
:
none
;
}
.
webconsole
-
filterbar
-
filtered
-
messages
.
reset
-
filters
-
button
{
margin
-
inline
-
start
:
0
.
5em
;
}
.
webconsole
-
output
{
flex
:
1
;
overflow
:
auto
;
}
.
webconsole
-
output
-
wrapper
.
message
{
-
-
border
-
size
:
3px
;
border
-
inline
-
start
:
var
(
-
-
border
-
size
)
solid
transparent
;
}
.
webconsole
-
output
-
wrapper
.
message
:
hover
{
border
-
inline
-
start
-
color
:
#
0a84ff
;
}
.
webconsole
-
output
-
wrapper
.
message
-
flex
-
body
>
.
message
-
body
{
display
:
flex
;
flex
-
wrap
:
wrap
;
max
-
width
:
100
%
;
}
.
webconsole
-
output
-
wrapper
.
message
-
body
>
*
{
flex
-
shrink
:
0
;
}
.
webconsole
-
output
.
hideTimestamps
>
.
message
>
.
timestamp
{
display
:
none
;
}
.
message
.
startGroup
.
message
-
body
>
.
objectBox
-
string
.
message
.
startGroupCollapsed
.
message
-
body
>
.
objectBox
-
string
{
color
:
var
(
-
-
theme
-
body
-
color
)
;
font
-
weight
:
bold
;
}
.
webconsole
-
output
-
wrapper
.
message
>
.
icon
{
margin
:
3px
0
0
0
;
padding
:
0
0
0
6px
;
}
.
message
.
error
>
.
icon
:
:
before
{
background
-
position
:
-
12px
-
36px
;
}
.
message
.
warn
>
.
icon
:
:
before
{
background
-
position
:
-
24px
-
36px
;
}
.
message
.
info
>
.
icon
:
:
before
{
background
-
position
:
-
36px
-
36px
;
}
.
message
.
network
.
method
{
margin
-
inline
-
end
:
5px
;
}
.
network
.
message
.
network
-
info
{
display
:
none
;
margin
-
top
:
8px
;
border
:
solid
1px
var
(
-
-
theme
-
splitter
-
color
)
;
}
.
network
.
message
.
open
.
network
-
info
{
display
:
block
;
}
.
network
.
message
.
network
-
info
.
panels
{
max
-
height
:
250px
;
min
-
height
:
100px
;
}
.
network
.
message
#
headers
-
panel
.
edit
-
and
-
resend
-
button
{
display
:
none
;
}
.
network
.
message
#
response
-
panel
.
treeTable
{
overflow
-
y
:
hidden
;
}
.
network
.
message
-
flex
-
body
>
.
message
-
body
{
display
:
flex
;
}
.
webconsole
-
output
-
wrapper
.
message
.
indent
{
display
:
inline
-
block
;
border
-
inline
-
end
:
solid
1px
var
(
-
-
theme
-
splitter
-
color
)
;
}
.
webconsole
-
output
-
wrapper
.
message
.
indent
[
data
-
indent
=
"
0
"
]
{
border
-
inline
-
end
:
none
;
}
.
message
.
startGroup
.
indent
.
message
.
startGroupCollapsed
.
indent
{
border
-
inline
-
end
-
color
:
transparent
;
margin
-
inline
-
end
:
5px
;
}
.
message
.
startGroup
.
icon
.
message
.
startGroupCollapsed
.
icon
{
display
:
none
;
}
.
webconsole
-
output
-
wrapper
.
open
-
inspector
{
background
:
unset
;
padding
-
left
:
unset
;
margin
-
left
:
unset
;
cursor
:
unset
;
}
.
new
-
consoletable
{
width
:
100
%
;
border
-
collapse
:
collapse
;
-
-
consoletable
-
border
:
1px
solid
var
(
-
-
table
-
splitter
-
color
)
;
}
.
new
-
consoletable
thead
.
new
-
consoletable
tbody
{
background
-
color
:
var
(
-
-
theme
-
body
-
background
)
;
}
.
new
-
consoletable
th
{
background
-
color
:
var
(
-
-
theme
-
selection
-
background
)
;
color
:
var
(
-
-
theme
-
selection
-
color
)
;
margin
:
0
;
padding
:
5px
0
0
;
font
-
weight
:
inherit
;
border
-
inline
-
end
:
var
(
-
-
consoletable
-
border
)
;
border
-
bottom
:
var
(
-
-
consoletable
-
border
)
;
}
/* ... */

